Sandbox/02-12-2025/force-app/main/default/objects/Invoice_Matching__c/Invoice_Matching__c.object-meta.xml
<CustomObject>
    <label>Payable Invoice Matching</label>
    <nameField>
        <label>PO#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payable Invoice Matchings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>