Sandbox/02-12-2025/force-app/main/default/objects/Invoice_Matching__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Invoice_Matchings</relationshipName>
    <type>Lookup</type>
</CustomField>