Sandbox/02-12-2025/force-app/main/default/objects/Invoice_Matching__c/fields/Invoice_Net__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Net__c</fullName>
    <formula>Payable_Invoice_to_PO__r.c2g__NetTotal__c</formula>
    <label>Invoice Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>