Sandbox/02-12-2025/force-app/main/default/objects/Invoice_Matching__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Date</type>
</CustomField>